chaning label in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Restaurant Recommendation..</h1>
 
-    <label>Favorite meal:</label>
+    <label>Favorite meal in which restaurant:</label>
     <input id="meal" placeholder="pizza / shawarma / burger" />
     <button onclick="go()">Recommend.</button>
 
