--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <title>Restaurant Recommendation</title>
   </head>
   <body>
-    <h1>Restaurant Recommendation..</h1>
+    <h1>Restaurant Recommendation....</h1>
 
     <label>Favorite meal in which restaurant:</label>
     <input id="meal" placeholder="pizza / shawarma / burger" />
