--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 
     <label>Favorite meal in which restaurant:</label>
     <input id="meal" placeholder="pizza / shawarma / burger" />
-    <button onclick="go()">Recommend....</button>
+    <button onclick="go()">Recommend...</button>
 
     <pre id="out"></pre>
 
