--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Restaurant Recommendation...</title>
+    <title>Restaurant Recommendation..</title>
   </head>
   <body>
     <h1>Restaurant Recommendation.</h1>
